--- a/style.css
+++ b/style.css
@@ -24,34 +24,24 @@ body, html {
 
 /* Style your background objects here */
 .background-object {
-    position: absolute;
+    
     height: 200px;
     /* Add other styling properties like width, height, and background-image */
     animation: pulse 3s ease-in-out infinite alternate;
 }
-#one{
-    top: 100px;
-    left: 20px;
+.left, .right{
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 15%;
 }
-#two{
-    top: 100px;
-    right: 15px;
-}
-#three{
-    top: 520px;
-    left: 30px;
-}
-#four{
-    top: 520px;
-    right: 20px;
-}
-#five{
-    top: 940px;
-    left: 25px;
-}
-#six{
-    top: 940px;
-    right: 20px;
+.right{
+    right: 0px;
 }
 @keyframes pulse {
     0% {
@@ -175,7 +165,15 @@ padding-right: 30px;
 
 @media (max-width: 800px) {
     .background-object{
-        height: 40px;
+        height: 80px;
+    }
+    .left, .right{
+        flex-direction: row;
+        width: 100%;
+        height: 50%;
+    }
+    .right{
+        bottom: 0px;
     }
     .navigation{
         width: 100%;
